# KohTravel

./: .gitignore  AUTH_SETUP_INSTRUCTIONS.md  CLAUDE.md  DEPLOYMENT.md  GIT_WORKFLOW.md  MVP_TASK_BREAKDOWN.md  README_DATABASES.md  package-lock.json  package.json  vercel.json
agent-infrastructure/: README.md  pyproject.toml
agent-infrastructure/configs/: kohtravel.yaml
agent-infrastructure/src/: __init__.py
agent-infrastructure/src/config/: settings.py
agent-infrastructure/src/core/: agent.py  conversation.py  logging_config.py  streaming.py
agent-infrastructure/src/providers/: anthropic_provider.py  base.py
agent-infrastructure/src/server/: main.py
agent-infrastructure/src/server/middleware/: auth.py  logging.py
agent-infrastructure/src/server/routes/: agent.py  cleanup.py  health.py  init.py
agent-infrastructure/src/tools/: base.py  external.py  file_ops.py
api/: alembic.ini  database.py  hello.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_calendar_events.py  seed_categories.py  test_db.py
api/agent/: health.py
api/agent/chat/: stream.py
api/alembic/: env.py
api/alembic/versions/: 21a6fd1ad58f_initial_database_schema_development.py  411f52f8f873_add_calendar_events_table.py  6dde2fa7c832_add_suggested_events_support_with_.py  c689822fdea1_add_file_hash_and_file_size_for_.py
api/models/: __init__.py  calendar_event.py  document.py  user.py
api/routes/: agent_chat.py  agent_tools.py  calendar.py  documents.py
api/scripts/: decode_nextauth.js
api/services/: agent_service.py  auth.py  context_service.py  document_processor.py  nextauth_validator.py  user_migration.py
api/utils/: prompt_loader.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navigation.tsx
frontend/src/lib/: api-client.ts  auth.ts  (+1 more)
prompts/agents/: travel-assistant.md
prompts/tools/: get_calendar_events.md  get_document.md  get_document_categories.md  search_documents.md  show_suggested_events_carousel.md  suggest_calendar_event.md  travel_summary.md
scripts/: dev-agent.sh  dev-instance-with-logs.sh  dev-instance.sh  kill-instance.sh  list-instances.sh  show-logs.sh  test-agent.py
shared/: config.js  config.py
(+17 files in other folders)
