[project]
name = "agent-infrastructure"
version = "0.1.0"
description = "Standalone agent infrastructure for multi-project AI agent management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sse-starlette>=3.0.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.29.0",
    "structlog>=25.4.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
agent-server = "agent_infrastructure.server.main:run_server"