[project]
name = "kohtravel-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "anthropic>=0.64.0",
    "docling>=2.47.1",
    "fastapi>=0.116.1",
    "fastapi-sse>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
]
