[project]
name = "kohtravel-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "anthropic>=0.64.0",
    "claude-code-sdk>=0.0.20",
    "docling>=2.47.1",
    "fastapi>=0.116.1",
    "fastapi-sse>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "authlib>=1.6.3",
    "fastapi-nextauth-jwt>=2.1.1",
    "hkdf>=0.0.3",
]
